// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.c34 {
  position: relative;
  display: inline-block;
}

.c35 {
  position: absolute;
}

.c36 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c12 {
  vertical-align: baseline;
}

.c32 {
  margin-right: 8px;
  font-size: 14px;
}

.c30 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #0a1633;
}

.c30 .c31 {
  color: #c3cad9;
}

.c30 .c31 {
  color: #3860f4;
}

.c33 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c33 .c31 {
  color: #c3cad9;
}

.c33:hover {
  color: #0a1633;
}

.c33:hover .c31 {
  color: #3357df;
}

.c28 {
  position: relative;
  margin-bottom: -8px;
}

.c28 .c29,
.c28 .sc-bxivhb {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c28 .c29:last-child,
.c28 .sc-bxivhb:last-child {
  margin-right: 0;
}

.c28 .c38 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c28 .c38:last-child {
  margin-right: 0;
}

.c28 .c39+.c39 {
  margin-left: -1px;
}

.c28 .c37 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c28 .c37:first-child {
  border-radius: 2px 0 0 2px;
}

.c28 .c37:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c8 {
  display: table;
  width: 100%;
}

.c7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.c7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.c7 input,
.c7 input:hover,
.c7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.c7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.c7 input {
  line-height: 26px;
  height: 26px;
}

.c7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c15 {
  position: relative;
}

.c17 {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.c11 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.c11:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c9 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  display: inline-block;
  vertical-align: middle;
  color: #0a1633;
  height: 28px;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.c9 .c16 {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c9 .c16::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 .c16::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 .c16:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9 .c16::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.c9:hover {
  border-color: #c3cad9;
}

.c9 .c14 {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.c9 .c14:hover {
  background: #f6f6fb;
}

.c9 .c16 {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.c9 .c10,
.c9 .c13 {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c9 .c10:hover,
.c9 .c13:hover {
  color: #3860f4;
}

.c9 .c10 {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.c9 .c13 {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.c20 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c22 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c25 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c27 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c18 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c18:hover {
  border-color: #3357df;
}

.c18:hover .c24 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.c18 .c24 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.c18 .c26 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.c18 .c19 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.c18 .c21,
.c18 .c23 {
  line-height: 16px;
}

.c18 .c21 {
  padding-right: 20px;
}

.c18 .c23 {
  padding-left: 20px;
}

.c18 .c21 {
  display: none;
}

<div>
  <form
    class="demo-form uc-fe-form c0"
  >
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <span
          class="uc-fe-input c7"
        >
          <span
            class="c8"
          >
            <input
              value="1"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        maxValue
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default c9"
        >
          <div>
            <span
              class="c10 uc-fe-numberinput-handler-up uc-fe-numberinput-handler c11"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up c12"
              />
            </span>
            <span
              class="c13 uc-fe-numberinput-handler-down uc-fe-numberinput-handler c11"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down c12"
              />
            </span>
          </div>
          <div
            class="c14 uc-fe-numberinput-input-wrap c15"
          >
            <input
              autocomplete="off"
              class="c16 uc-fe-numberinput-input c17"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        dot
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c18"
        >
          <div
            class="c19 c20"
          >
            <span
              class="c21 c22"
            >
              ON
            </span>
            <span
              class="c23 c22"
            >
              OFF
            </span>
            <span
              class="c24 c25"
            >
              <span
                class="c26 c27"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c18"
        >
          <div
            class="c19 c20"
          >
            <span
              class="c21 c22"
            >
              ON
            </span>
            <span
              class="c23 c22"
            >
              OFF
            </span>
            <span
              class="c24 c25"
            >
              <span
                class="c26 c27"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        noneContent
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c18"
        >
          <div
            class="c19 c20"
          >
            <span
              class="c21 c22"
            >
              ON
            </span>
            <span
              class="c23 c22"
            >
              OFF
            </span>
            <span
              class="c24 c25"
            >
              <span
                class="c26 c27"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <div
          class="c28"
        >
          <div
            checked=""
            class="c29 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default c30"
          >
            <i
              class="uc-fe-icon icon__cbox-ed c31 c32 c12"
            />
            topRight
          </div>
          <div
            class="c29 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c33"
          >
            <i
              class="uc-fe-icon icon__cbox c31 c32 c12"
            />
            topLeft
          </div>
          <div
            class="c29 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c33"
          >
            <i
              class="uc-fe-icon icon__cbox c31 c32 c12"
            />
            bottomRight
          </div>
          <div
            class="c29 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default c33"
          >
            <i
              class="uc-fe-icon icon__cbox c31 c32 c12"
            />
            bottomLeft
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="c1 uc-fe-form-item uc-fe-row c2"
    >
      <div
        class="uc-fe-form-label c3 c4 uc-fe-col c5"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="uc-fe-form-controller c4 uc-fe-col c6"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge c34"
      style="margin:10px;"
    >
      <div
        style="width:50px;height:50px;background:#ddd;"
      />
      <div
        class="uc-fe-badge-badge-wrap c35"
      >
        <span
          class="uc-fe-badge-badge c36"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
        style="background:white;color:black;border:1px solid #ddd;"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
        style="background:blue;"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        <span
          style="font-weight:bolder;"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.c3 {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: unset;
  min-height: unset;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge-dot c3 uc-fe-badge-badge c2"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <span
      class="uc-fe-badge-badge c2"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
}

.c2 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge c0"
    style="margin-top:10px;margin-right:50px;display:inline-block;"
  >
    <div
      style="width:50px;height:50px;background:#ddd;"
    />
    <div
      class="uc-fe-badge-badge-wrap c1"
    >
      <span
        class="uc-fe-badge-badge c2"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
